Fixed spacing and new lines for poem

--- a/rr-theme/static/css/content.css
+++ b/rr-theme/static/css/content.css
@@ -101,7 +101,7 @@ entry-content h6,
 .page-content blockquote p,
 .entry-content blockquote p {
   text-align: center;
-  line-height: 1em;
+  line-height: 1.5em;
 }
 
 .page-content blockquote p br,
